--- a/lab/J2.L.P0009/nbproject/private/private.properties
+++ b/lab/J2.L.P0009/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\nguyentrinhan2000\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mssql-jdbc-8.2.0.jre8.jar=E:\\Project\\mssql-jdbc-8.2.0.jre8.jar
+user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
